--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "css-loader": "^2.0.2",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^5.10.0",
@@ -37,10 +38,15 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "faker": "^4.1.0",
     "jest": "^23.6.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "react-css-modules": "^4.7.8",
     "regenerator-runtime": "^0.13.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-combine-loaders": "^2.0.4"
   }
 }
