--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.0",
     "react": "^16.7.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
