--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^5.4.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
