--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
-    "styled-components": "^4.1.3"
+    "react-media": "^1.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -40,10 +40,8 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "extract-text-webpack-plugin": "^3.0.2",
     "faker": "^4.1.0",
     "jest": "^23.6.0",
-    "mini-css-extract-plugin": "^0.5.0",
     "react-css-modules": "^4.7.8",
     "regenerator-runtime": "^0.13.1",
     "style-loader": "^0.23.1",
