Depoly server on docker and EC2

--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
     "react-dev": "webpack -d --watch",
     "seed": "node db/seeding.js",
-    "test": "jest"
+    "test": "jest",
+    "docker": "node db/seeding.js && node server/index.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.0",
+    "mongoose": "^5.4.2",
     "react": "^16.7.0",
-    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
     "react-media": "^1.9.2"
   },
